--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
   intl: null
+  path: ^1.8.0
+  path_provider: ^2.0.2
   provider: ^5.0.0
   shared_preferences: ^2.0.6
+  sqflite: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
