--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  fl_chart: ^0.36.2
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   intl: null
